force-app/main/default/objects/Asset/fields/Account_Name_with_both_Active_and_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_with_both_Active_and_Cancel__c</fullName>
    <formula>IF(Account.Name = IF(ISPICKVAL(Status, &apos;Invoice Cancelled&apos;),Account.Name,null), Account.Name,&apos;NA&apos;)</formula>
    <label>Account Name with</label>
    <type>Text</type>
</CustomField>