force-app/main/default/objects/Asset/fields/AccountID__c.field-meta.xml
<CustomField>
    <fullName>AccountID__c</fullName>
    <formula>AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is for Training users. Account id is required for Panoramas in TI</inlineHelpText>
    <label>AccountID</label>
    <type>Text</type>
</CustomField>