force-app/main/default/objects/Asset/fields/Active_Price_for_Reports__c.field-meta.xml
<CustomField>
    <fullName>Active_Price_for_Reports__c</fullName>
    <formula>IF(ISPICKVAL( Status ,&apos;Active&apos;) ,Price,0)</formula>
    <label>Active Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>