force-app/main/default/objects/Asset/fields/Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Date__c</fullName>
    <description>To manually track countersign date for memberships. Used to be Membership Start Date in Sugar.</description>
    <inlineHelpText>Countersign date for Membership Agreements</inlineHelpText>
    <label>Agreement Date</label>
    <type>Date</type>
</CustomField>