force-app/main/default/objects/Asset/fields/Annual_Full_Price__c.field-meta.xml
<CustomField>
    <fullName>Annual_Full_Price__c</fullName>
    <inlineHelpText>Annual amount for Membership. Full price of Sponsorship Level for Event.</inlineHelpText>
    <label>Annual/Full Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>