force-app/main/default/objects/Asset/fields/Asset_Power_of_One__c.field-meta.xml
<CustomField>
    <fullName>Asset_Power_of_One__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Power of One</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>