force-app/main/default/objects/Asset/fields/Bill_From__c.field-meta.xml
<CustomField>
    <fullName>Bill_From__c</fullName>
    <label>Bill From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>