force-app/main/default/objects/Asset/fields/Bill_From_ID__c.field-meta.xml
<CustomField>
    <fullName>Bill_From_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill From ID</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Assets (Bill From ID)</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>