force-app/main/default/objects/Asset/fields/Bill_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The asset was billed to an Account other than the receiving Account (e.g. an parent company is sponsoring a subsidiary).</description>
    <inlineHelpText>The asset was billed to an Account other than the receiving Account (e.g. an parent company is sponsoring a subsidiary).</inlineHelpText>
    <label>Billing Account Override</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>