force-app/main/default/objects/Asset/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Purchase History</relationshipLabel>
    <relationshipName>Purchase_History</relationshipName>
    <type>Lookup</type>
</CustomField>