force-app/main/default/objects/Asset/fields/cancelled_Price__c.field-meta.xml
<CustomField>
    <fullName>cancelled_Price__c</fullName>
    <formula>IF(ISPICKVAL( Status ,&apos;invoice cancelled&apos;) ,Price, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>cancelled Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>