force-app/main/default/objects/Asset/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Stores project category for riscv projects</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Category</valueSetName>
    </valueSet>
</CustomField>