force-app/main/default/objects/Asset/fields/Class_Development_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Class_Development_Revenue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Class Development Revenue</label>
    <type>Checkbox</type>
</CustomField>