force-app/main/default/objects/Asset/fields/CNCF_Memberships__c.field-meta.xml
<CustomField>
    <fullName>CNCF_Memberships__c</fullName>
    <formula>Product2.Name + &quot; &quot;+  TEXT(CNCF_Level__c)</formula>
    <label>CNCF Memberships</label>
    <type>Text</type>
</CustomField>