force-app/main/default/objects/Asset/fields/Days__c.field-meta.xml
<CustomField>
    <fullName>Days__c</fullName>
    <formula>IF((TODAY()- (PurchaseDate + VALUE( MID( PaymentTerms__c , 5, 4) )) )&lt;=30 &amp;&amp; (TODAY()- (PurchaseDate + VALUE( MID( PaymentTerms__c , 5, 4) )) )&gt;=0 ,30,IF(AND((TODAY()- (PurchaseDate + VALUE( MID( PaymentTerms__c , 5, 4) )) )&gt;30,(TODAY()- (PurchaseDate + VALUE( MID( PaymentTerms__c , 5, 4) )))&lt;=60),60,IF(AND((TODAY()- (PurchaseDate + VALUE( MID( PaymentTerms__c , 5, 4) )))&gt;60,(TODAY()- (PurchaseDate + VALUE( MID( PaymentTerms__c , 5, 4) )))&lt;=90),90,IF((TODAY()- (PurchaseDate + VALUE( MID( PaymentTerms__c , 5, 4) )))&gt;90,120,0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>