force-app/main/default/objects/Asset/fields/Days_GroupBy__c.field-meta.xml
<CustomField>
    <fullName>Days_GroupBy__c</fullName>
    <label>Days GroupBy</label>
    <length>10</length>
    <type>Text</type>
</CustomField>