force-app/main/default/objects/Asset/fields/Days_String__c.field-meta.xml
<CustomField>
    <fullName>Days_String__c</fullName>
    <formula>IF((TODAY()- (PurchaseDate + VALUE( MID( PaymentTerms__c , 5, 4) )) )&lt;=30 &amp;&amp; (TODAY()- (PurchaseDate + VALUE( MID( PaymentTerms__c , 5, 4) )) )&gt;=0 ,&quot;1&quot;,IF(AND((TODAY()- (PurchaseDate + VALUE( MID( PaymentTerms__c , 5, 4) )) )&gt;30,(TODAY()- (PurchaseDate + VALUE( MID( PaymentTerms__c , 5, 4) )))&lt;=60),&quot;2&quot;,IF(AND((TODAY()- (PurchaseDate + VALUE( MID( PaymentTerms__c , 5, 4) )))&gt;60,(TODAY()- (PurchaseDate + VALUE( MID( PaymentTerms__c , 5, 4) )))&lt;=90),&quot;3&quot;,IF((TODAY()- (PurchaseDate + VALUE( MID( PaymentTerms__c , 5, 4) )))&gt;90,&quot;4&quot;,&quot;0&quot;))))</formula>
    <label>Days_String</label>
    <type>Text</type>
</CustomField>