force-app/main/default/objects/Asset/fields/Display_Logo_On_Website__c.field-meta.xml
<CustomField>
    <fullName>Display_Logo_On_Website__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Don&apos;t Display Logo On Website</label>
    <type>Checkbox</type>
</CustomField>