force-app/main/default/objects/Asset/fields/edx_purchase_id__c.field-meta.xml
<CustomField>
    <fullName>edx_purchase_id__c</fullName>
    <label>edx_purchase_id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>