force-app/main/default/objects/Asset/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Purchase History</relationshipLabel>
    <relationshipName>Purchase_History</relationshipName>
    <type>Lookup</type>
</CustomField>