force-app/main/default/objects/Asset/fields/Ext_Enrollment_Id__c.field-meta.xml
<CustomField>
    <fullName>Ext_Enrollment_Id__c</fullName>
    <externalId>true</externalId>
    <label>Ext Enrollment Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>