force-app/main/default/objects/Asset/fields/Is_Person_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Person_Account__c</fullName>
    <formula>OR(Account.IsPersonAccount,Product2.Name = &apos;Individual Membership&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Person Account</label>
    <type>Checkbox</type>
</CustomField>