force-app/main/default/objects/Asset/fields/Last_NetSuite_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_NetSuite_Sync__c</fullName>
    <label>Last NetSuite Sync</label>
    <type>DateTime</type>
</CustomField>