force-app/main/default/objects/Asset/fields/Marked_for_Renewal_Processing__c.field-meta.xml
<CustomField>
    <fullName>Marked_for_Renewal_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marked for Renewal Processing</label>
    <type>Checkbox</type>
</CustomField>