force-app/main/default/objects/Asset/fields/MC_Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>MC_Cancellation_Reason__c</fullName>
    <formula>TEXT( Cancellation_Reason__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC Cancellation Reason</label>
    <type>Text</type>
</CustomField>