force-app/main/default/objects/Asset/fields/MC_Event_ID__c.field-meta.xml
<CustomField>
    <fullName>MC_Event_ID__c</fullName>
    <description>MC_Event_ID</description>
    <formula>Event__r.MCEventId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC Event ID</label>
    <type>Text</type>
</CustomField>