force-app/main/default/objects/Asset/fields/MC_Purchase_History_ID__c.field-meta.xml
<CustomField>
    <fullName>MC_Purchase_History_ID__c</fullName>
    <formula>(CASESAFEID(Id))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC Purchase History ID</label>
    <type>Text</type>
</CustomField>