force-app/main/default/objects/Asset/fields/MC_Status__c.field-meta.xml
<CustomField>
    <fullName>MC_Status__c</fullName>
    <formula>TEXT(Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC Status</label>
    <type>Text</type>
</CustomField>