force-app/main/default/objects/Asset/fields/Membership__c.field-meta.xml
<CustomField>
    <fullName>Membership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership</label>
    <referenceTo>Membership__c</referenceTo>
    <relationshipLabel>Purchase History</relationshipLabel>
    <relationshipName>Purchase_History</relationshipName>
    <type>Lookup</type>
</CustomField>