force-app/main/default/objects/Asset/fields/Membership_Doc_Download_URL__c.field-meta.xml
<CustomField>
    <fullName>Membership_Doc_Download_URL__c</fullName>
    <description>Membership Download URL. This is created in the Attachment TriggerHandler for &quot;Fully Executed&quot; Membership Documents</description>
    <formula>Opportunity__r.Membership_Doc_Download_URL__c</formula>
    <label>Membership Doc Download URL</label>
    <type>Text</type>
</CustomField>