force-app/main/default/objects/Asset/fields/NetSuite_Address_Id__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Address_Id__c</fullName>
    <label>NetSuite Address Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>