force-app/main/default/objects/Asset/fields/NetSuite_Department__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Department__c</fullName>
    <label>NetSuite Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>