force-app/main/default/objects/Asset/fields/NetSuite_Location__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Location__c</fullName>
    <label>NetSuite Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>