force-app/main/default/objects/Asset/fields/NS_Entity_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_Entity_ID__c</fullName>
    <externalId>true</externalId>
    <label>NS Entity ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>