force-app/main/default/objects/Asset/fields/NS_Subsidiary_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_Subsidiary_ID__c</fullName>
    <formula>IF(ISBLANK( Event__c ),Bill_From_ID__r.Subsidiary_ID__c,Event__r.BillFromProject__r.Subsidiary_ID__c)</formula>
    <label>NS Subsidiary ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>