force-app/main/default/objects/Asset/fields/Number_of_Years_Required__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Years_Required__c</fullName>
    <label>Number of Years Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>