force-app/main/default/objects/Asset/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Purchase History</relationshipLabel>
    <relationshipName>Asset</relationshipName>
    <type>Lookup</type>
</CustomField>