force-app/main/default/objects/Asset/fields/OpportunityLineItem__c.field-meta.xml
<CustomField>
    <fullName>OpportunityLineItem__c</fullName>
    <label>OpportunityLineItem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>