force-app/main/default/objects/Asset/fields/Parent_OppLineItem__c.field-meta.xml
<CustomField>
    <fullName>Parent_OppLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent OppLineItem</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Purchase History</relationshipLabel>
    <relationshipName>Purchase_History</relationshipName>
    <type>Lookup</type>
</CustomField>