force-app/main/default/objects/Asset/fields/Parent_Product__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Purchase History</relationshipLabel>
    <relationshipName>Purchase_History</relationshipName>
    <type>Lookup</type>
</CustomField>