force-app/main/default/objects/Asset/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <label>SO Status Update Date</label>
    <type>Date</type>
</CustomField>