force-app/main/default/objects/Asset/fields/PaymentFrequency__c.field-meta.xml
<CustomField>
    <fullName>PaymentFrequency__c</fullName>
    <label>Payment Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>