force-app/main/default/objects/Asset/fields/Preferred_Invoice_Method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Invoice_Method__c</fullName>
    <label>Preferred Invoice Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Hard Copy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>