force-app/main/default/objects/Asset/fields/Press_Release_Announcement__c.field-meta.xml
<CustomField>
    <fullName>Press_Release_Announcement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Press Release Announcement</label>
    <type>Checkbox</type>
</CustomField>