force-app/main/default/objects/Asset/fields/ProjectTeam__c.field-meta.xml
<CustomField>
    <fullName>ProjectTeam__c</fullName>
    <label>ProjectTeam</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>