force-app/main/default/objects/Asset/fields/Purchase_History_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Purchase_History_Owner_Name__c</fullName>
    <formula>Owner.FirstName +&apos;&apos;+ Owner.LastName</formula>
    <label>Purchase History Owner Name</label>
    <type>Text</type>
</CustomField>