force-app/main/default/objects/Asset/fields/PurchaseId__c.field-meta.xml
<CustomField>
    <fullName>PurchaseId__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <inlineHelpText>This is for Training users. PurchaseHistoryid is required for Panoramas in TI</inlineHelpText>
    <label>PurchaseId</label>
    <type>Text</type>
</CustomField>