force-app/main/default/objects/Asset/fields/Ready_for_NS_Sync__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_NS_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready for NS Sync</label>
    <type>Checkbox</type>
</CustomField>