force-app/main/default/objects/Asset/fields/Reason_for_change__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_change__c</fullName>
    <label>Reason for change</label>
    <type>TextArea</type>
</CustomField>