force-app/main/default/objects/Asset/fields/Related_To_for_Reports__c.field-meta.xml
<CustomField>
    <fullName>Related_To_for_Reports__c</fullName>
    <description>This field is created for the purpose of Reporting to prevent hyperlink tag in legends</description>
    <formula>IF(NOT(ISBLANK(Projects__c)),Projects__r.Name,
IF(NOT(ISBLANK(Event__c)),Event__r.Name,IF(NOT(ISBLANK(Training__c)),Training__r.Name,&quot;&quot;)))</formula>
    <label>Related To</label>
    <type>Text</type>
</CustomField>