force-app/main/default/objects/Asset/fields/Renewal_Opportunity_Created__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Opportunity_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renewal Opportunity Created?</label>
    <type>Checkbox</type>
</CustomField>