force-app/main/default/objects/Asset/fields/Renewal_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Opportunity_Name__c</fullName>
    <label>Renewal Opportunity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>