force-app/main/default/objects/Asset/fields/Renewal_Type__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Type__c</fullName>
    <description>Prorate - Will prorate after the required number of years have been met. Standard.
Nonprorate - 12 month renewal on the 1st of the month. 
Annual - Anniversary - 12 month renewal based on anniversary date (not the 1st).</description>
    <inlineHelpText>Prorate - Will prorate after the required number of years have been met. Standard.
Nonprorate - 12 month renewal on the 1st of the month. 
Annual - Anniversary - 12 month renewal based on anniversary date (not the 1st).</inlineHelpText>
    <label>Renewal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prorate</fullName>
            </value>
            <value>
                <fullName>Non-Prorate</fullName>
            </value>
            <value>
                <fullName>Calendar Year</fullName>
                <label>Annual - Anniversary</label>
            </value>
            <value>
                <fullName>Renewable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>