force-app/main/default/objects/Asset/fields/SalesOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>SalesOrderNumber__c</fullName>
    <externalId>true</externalId>
    <label>Sales Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>