force-app/main/default/objects/Asset/fields/SalesOrderStatus__c.field-meta.xml
<CustomField>
    <fullName>SalesOrderStatus__c</fullName>
    <label>Sales Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Not Synced to Netsuite</fullName>
                <default>true</default>
                <label>Not Synced to Netsuite</label>
            </value>
            <value>
                <fullName>At Risk</fullName>
                <isActive>false</isActive>
                <label>At Risk</label>
            </value>
            <value>
                <fullName>Invoice not created</fullName>
                <isActive>false</isActive>
                <label>Invoice not created</label>
            </value>
            <value>
                <fullName>Sent</fullName>
                <isActive>false</isActive>
                <label>Sent</label>
            </value>
            <value>
                <fullName>Unsent</fullName>
                <isActive>false</isActive>
                <label>Unsent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>