force-app/main/default/objects/Asset/fields/Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Send_Date__c</fullName>
    <inlineHelpText>This field will be  adde to Marketing Cloud Journeys</inlineHelpText>
    <label>Send Date</label>
    <type>Date</type>
</CustomField>