force-app/main/default/objects/Asset/fields/Send_Invoice_Copy_to_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Send_Invoice_Copy_to_Primary_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Invoice Copy to Primary Contact</label>
    <type>Checkbox</type>
</CustomField>