force-app/main/default/objects/Asset/fields/Skip_NetSuite_Sync__c.field-meta.xml
<CustomField>
    <fullName>Skip_NetSuite_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip NetSuite Sync</label>
    <type>Checkbox</type>
</CustomField>