force-app/main/default/objects/Asset/fields/Sugar_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Sugar_Owner_Id__c</fullName>
    <label>Sugar Owner Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>