force-app/main/default/objects/Asset/fields/SugarAssetID__c.field-meta.xml
<CustomField>
    <fullName>SugarAssetID__c</fullName>
    <description>Reference to the Sugar corp_membership, lf_event_sponsorship or lf_training guid</description>
    <externalId>true</externalId>
    <label>Sugar Asset ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>