force-app/main/default/objects/Asset/fields/Tax_Class__c.field-meta.xml
<CustomField>
    <fullName>Tax_Class__c</fullName>
    <label>Tax Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>