force-app/main/default/objects/Asset/fields/Training_Category__c.field-meta.xml
<CustomField>
    <fullName>Training_Category__c</fullName>
    <label>Training Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>