force-app/main/default/objects/Asset/fields/Year_Roll_Up_Number__c.field-meta.xml
<CustomField>
    <fullName>Year_Roll_Up_Number__c</fullName>
    <description>Number type</description>
    <formula>(Year( InstallDate ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year Roll Up Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>