force-app/main/default/objects/Asset/recordTypes/Corporate_Training.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Training</fullName>
    <active>true</active>
    <label>Corporate Training</label>
</RecordType>