force-app/main/default/objects/Asset/recordTypes/EdxTraining.recordType-meta.xml
<RecordType>
    <fullName>EdxTraining</fullName>
    <active>true</active>
    <label>EdxTraining</label>
</RecordType>