force-app/main/default/objects/Asset/recordTypes/Event_Sponsorship.recordType-meta.xml
<RecordType>
    <fullName>Event_Sponsorship</fullName>
    <active>false</active>
    <label>Event Sponsorship</label>
</RecordType>