force-app/main/default/objects/Asset/validationRules/If_Status_is_Invoiced_Cancelled.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Status_is_Invoiced_Cancelled</fullName>
    <active>true</active>
    <description>If Status is Invoice Cancelled, Cancellation Date is required.</description>
    <errorConditionFormula>IF(AND( ISCHANGED(Status),OR(ISPICKVAL( Status ,&quot;Invoice Cancelled&quot;), ISPICKVAL( Status ,&quot;Associate Cancelled&quot;)),ISNULL(Cancellation_Date__c)) ,True, False)</errorConditionFormula>
    <errorMessage>When Status is set to Invoice Cancelled or Associate Cancelled, Cancellation Date must be populated.</errorMessage>
</ValidationRule>